--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url('swiper/swiper-bundle.css');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 
 @layer base {
   body {
@@ -11,7 +13,7 @@
 }
 
 @layer components {
-  input[type="checkbox"]:checked ~ label span svg {
+  input[type="checkbox"]:checked~label span svg {
     @apply inline-flex;
   }
 
@@ -23,21 +25,22 @@
     @apply opacity-70;
   }
 
-  input#togglePlan:checked ~ .dot {
+  input#togglePlan:checked~.dot {
     @apply translate-x-full;
   }
 
-  input#checkboxLabel:checked ~ .box span {
+  input#checkboxLabel:checked~.box span {
     @apply opacity-100;
   }
 }
 
-body{
-  transition-property:opacity,  background-color,  transform, filter;
+body {
+  transition-property: opacity, background-color, transform, filter;
   transition-timing-function: ease-in-out;
   transition-duration: 500ms;
-} 
-.page-transition{
+}
+
+.page-transition {
   opacity: 0;
   background-color: black;
   transform: translateY(40px);
