--- a/styles/index.css
+++ b/styles/index.css
@@ -9,6 +9,26 @@ body {
   scroll-behavior: smooth;
 }
 
+/* Tailwind ile kayan çizgi hover animasyonu */
+.group:hover .hover-slide-animation::after {
+  transform: scaleX(1);
+}
+
+.hover-slide-animation::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #1c7d50;
+  /* Çizgi rengi */
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+  transform-origin: left;
+}
+
 @layer base {
   body {
     font-family: "Inter", sans-serif;
